# NEWRSS

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_GUIDE.md  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  folo.md  search.md  sprint.md
.claude/: .credentials.json  .superclaude-metadata.json  superclaude_env_vars.json
.claude/shell-snapshots/: snapshot-bash-1756453447219-ysjhj2.sh
.claude/statsig/: statsig.cached.evaluations.fed489545d  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.claude/todos/: 15f616c5-1a61-488e-abb9-332ff179a05a-agent-15f616c5-1a61-488e-abb9-332ff179a05a.json  1c944ba7-23bc-4ef0-9143-11c0d169f868-agent-1c944ba7-23bc-4ef0-9143-11c0d169f868.json  48721dab-8fb7-4183-a1dd-5aa8215eb75c-agent-48721dab-8fb7-4183-a1dd-5aa8215eb75c.json  51c38c4f-cb15-49ed-a91f-0cd7088e7d98-agent-51c38c4f-cb15-49ed-a91f-0cd7088e7d98.json  5808cb56-d5fa-44b6-a206-5dc072fbb11b-agent-5808cb56-d5fa-44b6-a206-5dc072fbb11b.json  8177ef1b-e020-46c7-a380-f6e6822d2afd-agent-8177ef1b-e020-46c7-a380-f6e6822d2afd.json  bdc6b36e-d7b0-46fd-b34c-736142e77c76-agent-bdc6b36e-d7b0-46fd-b34c-736142e77c76.json  c08ec34c-516f-4ff2-a064-8491ccd3ad68-agent-c08ec34c-516f-4ff2-a064-8491ccd3ad68.json  (+2 more)
.github/workflows/: ci.yml  deploy.yml
.todos/: comprehensive_testing_plan.md  phase-4-deployment-workflows.md  phase2_1_advanced_telegram.md  production_logging_migration.md  telegram_db_integration.md
backend/: Dockerfile  Dockerfile.prod  RSS_VALIDATION_SUMMARY.md  alembic.ini  coverage_summary.py  generate_summaries.py  healthcheck.py  populate_news.py  populate_rss_sources.py  pyproject.toml  pytest.ini  requirements.txt  rss_feeds_report.md  rss_sources_verified.py  rss_validation_results.json  simple_main.py  test_broadcast_pipeline.py  valid_rss_sources.py
backend/alembic/: env.py
backend/alembic/versions/: 002_telegram_user_integration.py  2f808f2eb6c6_add_exchange_api_integration_models.py
backend/app/: main.py
backend/app/api/: auth.py  broadcast.py  exchange.py  news.py  sources.py
backend/app/config/: rss_sources.py  rss_sources_clean.py
backend/app/core/: auth.py  broadcast_utils.py  celery_app.py  database.py  input_validation.py  logging.py  rate_limiting.py  redis.py  security.py  security_headers.py  settings.py  utils.py
backend/app/middleware/: monitoring.py
backend/app/models/: exchange.py  news.py  subscription.py  user.py
backend/app/repositories/: user_repository.py
backend/app/services/: ai_analyzer.py  broadcast_service.py  exchange_api_service.py  rss_fetcher.py  telegram_bot.py  telegram_notifier.py  telegram_webhook.py  translator.py  user_filter_service.py
backend/app/tasks/: ai_analyzer.py  crawler.py  daily_digest.py  maintenance.py  news_aggregator.py  news_crawler.py
backend/claudedocs/: security_hardening_report.md  security_implementation_summary.md
backend/static/: index.html
backend/tests/: conftest.py  test_ai_analyzer_comprehensive.py  test_auth_coverage_boost.py  test_comprehensive_coverage.py  test_coverage_push_75.py  test_coverage_report.py  test_database_core_boost.py  test_database_functions.py  test_direct_real.py  test_e2e_telegram_journey.py  test_e2e_websocket_realtime.py  test_environment_setup.py  test_final_comprehensive.py  test_integration.py  test_news_api_boost.py  test_performance_load.py  test_real_auth_api_complete.py  test_real_integration.py  test_real_news_crawler.py  test_real_services.py  test_real_services_advanced.py  test_real_services_no_token.py  test_real_subscription_complete.py  test_real_subscription_coverage.py  test_real_telegram_services.py  test_real_telegram_simple.py  test_real_uncovered.py  test_simple.py  test_standalone_real.py  test_subscription_api_real.py  test_subscription_real_simple.py  test_telegram_bot_comprehensive.py  test_telegram_services_simple.py  test_telegram_webhook_boost.py
backend/tests/security/: test_security_hardening.py
backend/tests/test_api/: test_auth.py  test_exchange.py  test_news.py
backend/tests/test_core/: test_auth.py  test_database.py  test_redis.py  test_settings.py
backend/tests/test_integration/: test_telegram_integration.py
backend/tests/test_models/: test_news.py  test_user.py
backend/tests/test_repositories/: __init__.py  test_user_repository.py
backend/tests/test_services/: test_ai_analyzer.py  test_exchange_api_service.py  test_rss_fetcher.py  test_telegram_bot.py  test_telegram_bot_advanced.py  test_telegram_notifier.py  test_telegram_notifier_ai.py
backend/tests/test_tasks/: test_news_crawler.py
claudedocs/: README.md  analysis_report.md  api_documentation.md  code-quality-enhancement-report.md  complete_implementation_summary.md  comprehensive_testing_status.md  development_workflows.md  implementation_workflows.md  phase-3-completion-summary.md  phase-4-deployment-completion-summary.md  phase1_completion_report.md  phase2_1_completion_report.md  phase2_2_implementation_summary.md  phase2_2_todos.md  phase2_completion_report.md  production-deployment-guide.md  production_logging_migration_report.md  project_structure.md  real_time_broadcasting_implementation.md  requirements_analysis.md  telegram_bot_setup.md  telegram_database_integration_summary.md  workflow_2_3_exchange_api_implementation_summary.md
frontend/: .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  Dockerfile.prod  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  (+1 more)
nginx/: nginx.conf  nginx.prod.conf
scripts/: backup.sh  postgres-init.sql  restore.sh
(+56 files in other folders)
